Panel de seleccion de películas (#2)
funcional la parte de mostrar menu principal y seleccion de peliculas